src/test/deca/syntax/valid/provided/char.deca
{
   float x = 1.5;
   println(x);

}
