src/test/deca/syntax/invalid/provided/type_incompatibles.deca
{
    int x = true | 5;
}
